--- a/config.json
+++ b/config.json
@@ -47,9 +47,9 @@
     ],
     "genscript": [
         {
-            "script": "generator_alias args1 args2 args3",
+            "script": "manual 1",
             "description": "",
-            "is_example": false,
+            "is_example": true,
             "only_deploy": false
         }
     ],
