Deploy: Generate IO Data

--- a/config.json
+++ b/config.json
@@ -56,5 +56,6 @@
     "versions": {
         "config": 1,
         "repository": 1
-    }
+    },
+    "deploy_uuid": "9e321034-aed1-4a7e-a90b-038dbe9c649c"
 }
